--- a/p_negocios.html
+++ b/p_negocios.html
@@ -122,8 +122,8 @@
 
 <div>
 	<h3 id="iframe1">Receta De Nuestras Galletas</h3>
-	<iframe  width=90% height="315" src="https://www.youtube.com/embed/eqXFuil483A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+		<iframe  width=90% height="315" src="https://www.youtube.com/embed/eqXFuil483A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 	<br>
 	<br>
 	<br>
@@ -132,7 +132,7 @@
 	<br>
 	<div >
 	<h3>Receta de Milkshake.</h3>
-	<iframe id="iframe2" width="90%" height="315" src="https://www.youtube.com/embed/5w9snBi7Org" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe id="iframe2" width="90%" height="315" src="https://www.youtube.com/embed/5w9snBi7Org" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>	
 	<br>
 	<br>
@@ -142,7 +142,7 @@
 	<br>
 	<div id="iframe3">
 	<h3>Como se Realizan los sobre de Endulzantes</h3>
-		<iframe width="90%" height="315" src="https://www.youtube.com/embed/dOwqvYchV8k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/epqeg9g327M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	<br>
 	<br>
